--- a/js/entrega-1/www/index.html
+++ b/js/entrega-1/www/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>EJERCICIOS DE BERNARDO</h1>
 
-    <script src="calculadora switch.js.js"></script>
+    <script src="calculadora switch.js"></script>
   </body>
 </html>
